rust/kcl-lib/tests/sketch_block_failed_unit_conversion/execution_error.snap
---
source: kcl-lib/src/simulation_tests.rs
description: Error from executing sketch_block_failed_unit_conversion.kcl
---
KCL Semantic error

  × semantic: sketch variable initial value must be a length coercible to the
  │ module length unit number(mm), but found a number (deg)
   ╭─[6:13]
 5 │   // units (millimeters).
 6 │   len = var 1deg
   ·             ──┬─
   ·               ╰── tests/sketch_block_failed_unit_conversion/input.kcl
 7 │ }
   ╰────
